GoalTracker/force-app/main/default/objects/Proposal__c/fields/Date_Proposal_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Proposal_Submitted__c</fullName>
    <label>Date Proposal Submitted</label>
    <type>Date</type>
</CustomField>