GoalTracker/force-app/main/default/objects/Proposal__c/fields/Project_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Project_Purpose__c</fullName>
    <label>Project Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsored Research</fullName>
            </value>
            <value>
                <fullName>Sponsored Instruction</fullName>
            </value>
            <value>
                <fullName>Other Sponsored Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>