GoalTracker/force-app/main/default/objects/Proposal__c/fields/Proposal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Approved</label>
    <type>Checkbox</type>
</CustomField>