GoalTracker/force-app/main/default/objects/Proposal__c/fields/Proposal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Deadline__c</fullName>
    <label>Proposal Deadline</label>
    <type>Date</type>
</CustomField>