GoalTracker/force-app/main/default/objects/Proposal__c/fields/Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Number__c</fullName>
    <label>Proposal Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>