GoalTracker/force-app/main/default/objects/Proposal__c/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revised Budget Created</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Not Funded</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Sponsor Review</fullName>
            </value>
            <value>
                <fullName>Award Notification Received</fullName>
            </value>
            <value>
                <fullName>Pending Sponsor Review Award Anticipated</fullName>
            </value>
            <value>
                <fullName>Final SPO Review</fullName>
            </value>
            <value>
                <fullName>Withdrawn From Sponsor</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>SPO Status Confirmation</fullName>
            </value>
            <value>
                <fullName>Specialist Review: Pending Changes by PI</fullName>
            </value>
            <value>
                <fullName>Department Review</fullName>
            </value>
            <value>
                <fullName>Specialist Review</fullName>
            </value>
            <value>
                <fullName>Department Review: Response Pending from PI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>