GoalTracker/force-app/main/default/objects/Proposal__c/fields/Proposal_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Submitted</label>
    <type>Checkbox</type>
</CustomField>